@@ -1,63 +1,238 @@
 package loghub.receivers;
 
 import java.io.IOException;
+import java.io.InputStreamReader;
+import java.net.MalformedURLException;
+import java.net.URI;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.text.ParseException;
 import java.time.Duration;
+import java.time.Instant;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
+
+import javax.management.MBeanServerConnection;
+import javax.management.remote.JMXConnector;
+import javax.management.remote.JMXConnectorFactory;
+import javax.management.remote.JMXServiceURL;
 
 import org.apache.logging.log4j.LogBuilder;
 
-import jdk.jfr.Category;
+import jdk.jfr.Configuration;
+import jdk.jfr.EventType;
 import jdk.jfr.ValueDescriptor;
+import jdk.jfr.consumer.RecordedClass;
 import jdk.jfr.consumer.RecordedEvent;
 import jdk.jfr.consumer.RecordedObject;
 import jdk.jfr.consumer.RecordedStackTrace;
 import jdk.jfr.consumer.RecordingFile;
+import jdk.management.jfr.RemoteRecordingStream;
+import loghub.BuildableConnectionContext;
 import loghub.BuilderClass;
+import loghub.DurationUnit;
 import loghub.Helpers;
+import loghub.cloners.Immutable;
+import loghub.configuration.Properties;
 import loghub.events.Event;
+import lombok.Getter;
 import lombok.Setter;
+
+import static jdk.jfr.Configuration.create;
+import static jdk.jfr.Configuration.getConfiguration;
 
 @SelfDecoder
 @BuilderClass(Jfr.Builder.class)
-@Blocking
 public class Jfr extends Receiver<Jfr, Jfr.Builder> {
 
-    public enum DURATION_FORMAT {
-        KEEP,
-        NANOS,
-        MICROS,
-        MILLIS,
-        SECONDS,
-        SECONDS_FLOAT,
+    @Immutable
+    public static class JfrContext extends BuildableConnectionContext<URI> implements Cloneable {
+        @Getter
+        private final URI jmxUri;
+        private JfrContext(JMXServiceURL jmxUrl) {
+            this.jmxUri = URI.create(jmxUrl.toString());
+        }
+        private JfrContext(Path jfrPath) {
+            this.jmxUri = jfrPath.toUri();
+        }
+        private JfrContext(URI jmxUri) {
+            this.jmxUri = jmxUri;
+        }
+        public Object clone() {
+            JfrContext kc = new JfrContext(jmxUri);
+            kc.setPrincipal(getPrincipal());
+            return kc;
+        }
+        @Override
+        public URI getLocalAddress() {
+            return null;
+        }
+
+        @Override
+        public URI getRemoteAddress() {
+            return jmxUri;
+        }
     }
 
     @Setter
     public static class Builder extends Receiver.Builder<Jfr, Jfr.Builder> {
         protected String jfrFile = "-";
-        protected DURATION_FORMAT durationUnit = null;
+        protected DurationUnit durationUnit = DurationUnit.DURATION;
+        protected String jmxUrl = null;
+        protected int flushInterval = 2000;
+        protected String jfrConfiguration = null;
+        protected String jfrConfigurationFile = null;
+        protected Map<String, String> settings = Map.of();
         public Jfr build() {
             return new Jfr(this);
         }
     }
-
     public static Jfr.Builder getBuilder() {
         return new Jfr.Builder();
     }
 
     private final Path jfrFile;
-    private final DURATION_FORMAT durationUnit;
+    private final DurationUnit durationUnit;
+    private final JMXServiceURL jmxUrl;
+    private final AtomicReference<Instant> lastFlushReference;
+    private final AtomicInteger failurePause;
+    private final AtomicReference<RemoteRecordingStream> jfrStream;
+    private volatile boolean isRunning;
+    private final Map<String, String> jfrSettings;
+    private final int flushInterval;
+    private final JfrContext jfrContext;
 
     protected Jfr(Jfr.Builder builder) {
         super(builder);
-        jfrFile = Paths.get(Helpers.fileUri(builder.jfrFile));
         durationUnit = builder.durationUnit;
+        flushInterval = builder.flushInterval;
+        if (builder.jmxUrl != null) {
+            try {
+                jmxUrl = new JMXServiceURL(builder.jmxUrl);
+            } catch (MalformedURLException e) {
+                throw new IllegalArgumentException("Invalid JMX URL", e);
+            }
+            jfrContext = new JfrContext(jmxUrl);
+            jfrFile = null;
+            lastFlushReference = new AtomicReference<>(Instant.now());
+            failurePause = new AtomicInteger(100);
+            jfrStream = new AtomicReference<>();
+            try {
+                 jfrSettings = resolveSettings(builder.jfrConfiguration, builder.jfrConfigurationFile, builder.settings);
+            } catch (IOException | ParseException e) {
+                throw new IllegalArgumentException("Unable to use the JFR configuration", e);
+            }
+        } else if (builder.jfrFile != null) {
+            jmxUrl = null;
+            jfrFile = Paths.get(Helpers.fileUri(builder.jfrFile));
+            jfrContext = new JfrContext(jfrFile);
+            lastFlushReference = null;
+            failurePause = null;
+            jfrStream = null;
+            jfrSettings = null;
+        } else {
+            throw new IllegalArgumentException("Needs a JMX URL or jfr file path");
+        }
+    }
+
+    @Override
+    protected boolean isBlocking(Builder builder) {
+        return builder.jmxUrl == null;
+    }
+
+    Map<String, String> resolveSettings(String jfrConfiguration, String jfrConfigurationFile, Map<String, String> settings)
+            throws IOException, ParseException {
+        Map<String, String> base = (jfrConfiguration == null || jfrConfiguration.isBlank()) ? new HashMap<>() :
+                                           getConfiguration(jfrConfiguration).getSettings();
+        if (! (jfrConfigurationFile == null || jfrConfigurationFile.isBlank())) {
+            URI configUri = Helpers.fileUri(jfrConfigurationFile);
+            Configuration fileConfiguration = create(new InputStreamReader(configUri.toURL().openStream(), java.nio.charset.StandardCharsets.UTF_8));
+            base.putAll(fileConfiguration.getSettings());
+        }
+        base.putAll(settings);
+        return Map.copyOf(base);
+    }
+
+    @Override
+    public boolean configure(Properties properties) {
+        if (jmxUrl != null) {
+            properties.registerScheduledTask("JFR watch dog for " + jmxUrl, this::checkWatchdog, flushInterval);
+        }
+        return super.configure(properties);
+    }
+
+    @Override
+    public void run() {
+        if (jmxUrl == null) {
+            super.run();
+        } else {
+            runRemoteStream();
+        }
+    }
+
+    private void runRemoteStream() {
+        isRunning = true;
+        while (isRunning) {
+            try (JMXConnector jmxc = JMXConnectorFactory.connect(jmxUrl, Map.of())) {
+                MBeanServerConnection conn = jmxc.getMBeanServerConnection();
+                try (var rs = new RemoteRecordingStream(conn)) {
+                    logger.debug("New recording stream");
+                    jfrStream.set(rs);
+                    rs.setSettings(jfrSettings);
+                    rs.onEvent(this::handleJfrEvent);
+                    rs.onError(this::handleJfrException);
+                    rs.onFlush(() -> lastFlushReference.set(Instant.now()));
+                    rs.start();
+                }
+            } catch (IOException ex) {
+                logger.atError()
+                      .withThrowable(logger.isDebugEnabled() ? ex : null)
+                      .log("JMX connection failed: {}", () -> Helpers.resolveThrowableException(ex));
+                failurePause.getAndUpdate(x -> Math.min(x * 2, 3600 * 1000));
+            } catch (RuntimeException ex) {
+                logger.atError()
+                      .withThrowable(ex)
+                      .log("JMX connection failed: {}", () -> Helpers.resolveThrowableException(ex));
+                failurePause.getAndUpdate(x -> Math.min(x * 2, 3600 * 1000));
+            }
+            try {
+                sleep(failurePause.get());
+            } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
+                break;
+            }
+        }
+    }
+
+    private void handleJfrException(Throwable ex) {
+        logger.atError()
+              .withThrowable(ex)
+              .log("JFR failure: {}", () -> Helpers.resolveThrowableException(ex));
+    }
+
+    private void checkWatchdog() {
+        Instant lastFlush = lastFlushReference.get();
+        if (Instant.now().toEpochMilli() - lastFlush.toEpochMilli() > flushInterval) {
+            Optional.ofNullable(jfrStream.get()).ifPresent(RemoteRecordingStream::close);
+        } else {
+            failurePause.getAndUpdate(x -> flushInterval);
+        }
+    }
+
+    private void handleJfrEvent(RecordedEvent re) {
+        Event ev = convertEvent(re);
+        send(ev);
+    }
+
+    @Override
+    public void stopReceiving() {
+        isRunning = false;
+        super.stopReceiving();
     }
 
     @Override
@@ -110,20 +285,29 @@ public class Jfr extends Receiver<Jfr, Jfr.Builder> {
     }
 
     private Event convertEvent(RecordedEvent re) {
-        Event ev = getEventsFactory().newEvent();
+        Event ev = getEventsFactory().newEvent(jfrContext);
         ev.putAll(fields(re));
-        Duration duration = re.getDuration();
-        if (duration.toNanos() == 0) {
+        // Some attribute has a startTime declared
+        // Detect them as flag without duration or end time
+        boolean withStartTime = re.hasField("startTime");
+        Duration duration = withStartTime ? Duration.ZERO : re.getDuration();
+        if (withStartTime) {
+            ev.remove("endTime");
+            ev.remove("startTime");
+            ev.remove("duration");
+            ev.setTimestamp(re.getStartTime());
+        } else  if (duration == Duration.ZERO || duration.isZero()) {
+            ev.setTimestamp(re.getEndTime());
             ev.put("eventTime", re.getEndTime());
             ev.remove("endTime");
             ev.remove("startTime");
             ev.remove("duration");
         } else {
+            ev.setTimestamp(re.getEndTime());
             ev.put("endTime", re.getEndTime());
             ev.put("startTime", re.getStartTime());
             ev.put("duration", convertDuration(re.getDuration()));
         }
-        ev.put("eventType", re.getEventType().getName());
         if (ev.containsKey("name") && ev.containsKey("value")) {
             String name = (String) ev.remove("name");
             Object value = ev.remove("value");
@@ -133,19 +317,30 @@ public class Jfr extends Receiver<Jfr, Jfr.Builder> {
             Object value = ev.remove("value");
             ev.put(key, value);
         }
-        ev.setTimestamp(re.getEndTime());
-        Optional.ofNullable(re.getEventType().getAnnotation(Category.class))
-                .map(c -> String.join("/", c.value()))
-                .ifPresent(c -> ev.putMeta("category", c));
+        EventType jfrEventType = re.getEventType();
+        Map<String, Object> evtMap = new HashMap<>();
+        Optional.ofNullable(jfrEventType.getCategoryNames()).filter(l -> ! l.isEmpty()).ifPresent(l -> evtMap.put("categories",l ));
+        Optional.ofNullable(jfrEventType.getDescription()).filter(s -> ! s.isBlank()).ifPresent(s -> evtMap.put("description", s));
+        Optional.ofNullable(jfrEventType.getLabel()).filter(s -> ! s.isBlank()).ifPresent(s -> evtMap.put("label", s));
+        Optional.ofNullable(jfrEventType.getName()).filter(s -> ! s.isBlank()).ifPresent(s -> evtMap.put("name", s));
+        ev.put("eventType", evtMap);
         return ev;
     }
 
+    private record LocalValueDescriptor(String name, Object value) {
+        LocalValueDescriptor(ValueDescriptor vd, Object o) {
+            this(vd.getName(), o);
+        }
+    }
+
     private Map<String, Object> fields(RecordedObject object) {
-        Map<String, Object> values = new HashMap<>();
-        object.getFields().stream()
-                          .map(vd -> Map.entry(vd.getName(), Optional.ofNullable(convert(object, vd))))
-                          .filter(e -> e.getValue().isPresent())
-                          .forEach(e -> values.put(e.getKey(), e.getValue().get()));
+        List<ValueDescriptor> lvd = object.getFields();
+        Map<String, Object> values = HashMap.newHashMap(lvd.size());
+        // startTime is a pseudo field, so skip it.
+        lvd.stream()
+           .map(vd -> new LocalValueDescriptor(vd, convert(object, vd)))
+           .filter(e -> e.value != null && ! "startTime".equals(e.name))
+           .forEach(vd -> values.put(vd.name, vd.value));
         return values;
     }
 
@@ -158,73 +353,76 @@ public class Jfr extends Receiver<Jfr, Jfr.Builder> {
     }
 
     private Object convertFromContentType(RecordedObject object, ValueDescriptor descriptor) {
-        switch (descriptor.getContentType()) {
-        case "jdk.jfr.Timestamp":
-            return object.getInstant(descriptor.getName());
-        case "jdk.jfr.Timespan":
-            return convertDuration(object.getDuration(descriptor.getName()));
-        default:
-            return convertFromtype(object, descriptor);
-        }
+        return switch (descriptor.getContentType()) {
+            case "jdk.jfr.Timestamp" -> object.getInstant(descriptor.getName());
+            case "jdk.jfr.Timespan" -> convertDuration(object.getDuration(descriptor.getName()));
+            // Return a long, to keep unsigned any type shorter that a long
+            case "jdk.jfr.Unsigned" -> object.getLong(descriptor.getName());
+            default -> convertFromtype(object, descriptor);
+        };
     }
 
     private Object convertDuration(Duration duration) {
-        try {
-            switch (durationUnit) {
-            case KEEP:
-                return duration;
-            case NANOS:
-                return duration.toNanos();
-            case MICROS:
-                return duration.toNanos() / 1000L;
-            case MILLIS:
-                return duration.toMillis();
-            case SECONDS:
-                return duration.toSeconds();
-            case SECONDS_FLOAT:
-                return duration.toSeconds() + (double) duration.toNanosPart() / 1_000_000_000;
-            default:
-                throw new IllegalArgumentException(durationUnit.toString());
+        if (durationUnit == DurationUnit.DURATION) {
+            return duration;
+        } else {
+            try {
+                return durationUnit.to(duration);
+            } catch (ArithmeticException e) {
+                // SECONDS_FLOAT don't throw ArithmeticException, so don't handle the double case
+                return duration.isNegative() ? Long.MIN_VALUE : Long.MAX_VALUE;
             }
-        } catch (ArithmeticException e) {
-            // SECONDS_FLOAT don't throw ArithmeticException, so don't handle the double case
-            return duration.isNegative() ? Long.MIN_VALUE : Long.MAX_VALUE;
-         }
+        }
     }
 
     private Object convertFromtype(RecordedObject object, ValueDescriptor descriptor) {
         String name = descriptor.getName();
-        switch (descriptor.getTypeName()) {
-        case "boolean":
-            return object.getBoolean(name);
-        case "char":
-            return object.getChar(name);
-        case "byte":
-            return object.getByte(name);
-        case "short":
-            return object.getShort(name);
-        case "int":
-            return object.getInt(name);
-        case "long":
-            return object.getLong(name);
-        case "float":
-            return object.getFloat(name);
-        case "double":
-            return object.getDouble(name);
-        case "jdk.types.StackTrace":
-            return resolveStack(object.getValue(name));
-        default:
-            Object value = object.getValue(name);
-            if (value instanceof RecordedObject) {
-                return resolve((RecordedObject) value);
-            } else {
-                return value;
+        return switch (descriptor.getTypeName()) {
+            case "boolean" -> object.getBoolean(name);
+            case "char" -> object.getChar(name);
+            case "byte" -> object.getByte(name);
+            case "short" -> object.getShort(name);
+            case "int" -> object.getInt(name);
+            case "long" -> object.getLong(name);
+            case "float" -> object.getFloat(name);
+            case "double" -> object.getDouble(name);
+            case "java.lang.String" -> object.getString(name);
+            case "jdk.types.StackTrace" -> resolveStack(object.getValue(name));
+            case "java.lang.Class" -> resolveClass(object.getValue(name));
+            case "jdk.types.ThreadGroup",   // RecordedThreadGroup
+                 "java.lang.Thread",        // RecordedThread
+                 "jdk.types.Method",        // RecordedMethod
+                 "jdk.types.Module",        // RecordedObject
+                 "jdk.types.Package",       // RecordedObject
+                 "jdk.types.ClassLoader"    // RecordedClassLoader
+                    -> resolve(object.getValue(name));
+            default -> object.getValue(name);
+        };
+    }
+
+    private Object resolveClass(RecordedClass clazz) {
+        if (clazz == null) {
+            return null;
+        } else {
+            List<String> fields = clazz.getFields()
+                                       .stream()
+                                       .map(ValueDescriptor::getName)
+                                       .filter(s -> ! "name".equals(s) && ! "modifiers".equals(s) && ! "id".equals(s) && ! "hidden".equals(s))
+                                       .toList();
+            Map<String, Object> values = HashMap.newHashMap(fields.size());
+            values.put("name", clazz.getName());
+            for (String field: fields) {
+                Object value = resolve(clazz.getValue(field));
+                if (value != null) {
+                    values.put(field, value);
+                }
             }
+            return values;
         }
     }
 
     private Object resolveStack(RecordedStackTrace stack) {
-        return stack == null ? null : stack.getFrames().stream().map(this::resolve).collect(Collectors.toList());
+        return stack == null ? null : stack.getFrames().stream().map(this::resolve).toList();
     }
 
     private Object resolve(RecordedObject object) {
@@ -233,7 +431,7 @@ public class Jfr extends Receiver<Jfr, Jfr.Builder> {
 
     @Override
     public String getReceiverName() {
-        return "JFR:" + jfrFile;
+        return "JFR:" + (jfrFile == null ? jmxUrl : jfrFile).toString();
     }
 
 }
